# study_agent

./: .env  .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  app.py  main.py  pyproject.toml  test_agents.py  test_llm_agents.py  test_new_agents.py  test_step_by_step.py
config/prompts/: ExampleGenerationAgent.yaml  ExplanationAgent.yaml  MemoryRetrievalAgent.yaml  MemoryUpdateAgent.yaml  PracticeGenerationAgent.yaml  UnderstandingAgent.yaml  ValidationAgent.yaml  code_explainer.yaml  content_validator.yaml  debugging_guide.yaml  learning_path.yaml  practice_generator.yaml  progress_tracker.yaml
data/long_term/: knowledge_graph.json  learning_history.json  portfolio.json
data/short_term/: session_36d5ebf0-45e8-4987-a8dc-5f8737c70126.json  session_78347413-ed26-474f-906a-8c12c03c4140.json
src/: __init__.py
src/agents/: __init__.py  base_agent.py  code_explainer_agent.py  content_validator_agent.py  debugging_guide_agent.py  example_generation_agent.py  explanation_agent.py  learning_path_agent.py  memory_retrieval_agent.py  memory_update_agent.py  practice_generation_agent.py  progress_tracker_agent.py  understanding_agent.py  validation_agent.py
src/memory/: __init__.py  example_usage.py  knowledge_base.py  long_term_memory.py  memory_store.py  memory_system.py  sensory_memory.py  short_term_memory.py  test_memory_system.py
src/tools/: README.md  __init__.py  base_tool.py  code_execution_tool.py  code_interpreter.py  document_retriever.py  documentation_retrieval_tool.py  main.py  practice_evaluation_tool.py  test_runner.py  (+2 more)
tests/: test_workflow.py
(+3 files in other folders)
