[project]
name = "study-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astor>=0.8.1",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "openai>=2.28.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.30.0",
]
